--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.1",
+    "child_process": "^1.0.2",
     "classnames": "^2.3.1",
     "fastclick": "^1.0.6",
     "history": "^5.0.0",
