--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "bundle": "babel-node tools/run bundle",
     "build": "babel-node tools/run build",
     "build-prod": "better-npm-run build:prod",
+    "deploy": "sh deploy.sh",
     "clean-cache": "babel-node tools/run clean-cache",
     "start": "babel-node tools/run start",
     "start-prod": "better-npm-run start:prod",
