--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "swiper": "6.0.2",
     "universal-router": "^9.0.1",
     "uuid": "^8.3.2",
+    "validator": "^13.7.0",
     "whatwg-fetch": "^3.6.2"
   },
   "resolutions": {
