--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
+    "react-tag-input-component": "1.0.5",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
